--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@tauri-apps/api": "^1"
+    "@tauri-apps/api": "^1",
+    "svelte-routing": "^2.13.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tauri-apps/cli": "^1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "@tauri-apps/cli": "^1"
+    "vite": "^5.0.3"
   }
 }
