--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,8 +16,10 @@ serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 actix-web = "4.8.0"
 log = "0.4.22"
-actix-cors = "0.6.4"
+actix-cors = "0.6.5"
 dotenv = "0.15.0"
+reqwest = { version = "0.12.5", features = ["json"] }
+
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
