ı need to update that connection between front-and back on this code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
   "svelte.enable-ts-plugin": true,
   "cSpell.words": [
-    "tauri"
+    "behaviour",
+    "Hasher",
+    "quic",
+    "tauri",
+    "yamux"
   ]
 }
