--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,15 +20,14 @@ actix-cors = "0.7.0"
 dotenv = "0.15.0"
 reqwest = { version = "0.12.5", features = ["json"] }
 tokio = { version = "1.38.1", features = ["full"] }
-once_cell = "1.19.0"
 
-libp2p = { version = "0.53.2", features = ["full"] }
-async-trait = "0.1.81"
-futures = { version = "0.3.30" }
-tracing = { version = "0.1.40" }
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-
-async-channel = "2.3.1"
+sqlx = { version = "0.8.0", features = [
+    "runtime-async-std-native-tls",
+    "mysql",
+    "chrono",
+    "uuid",
+] }
+uuid = { version = "1.6.1", features = ["serde", "v4"] }
 
 
 [features]
