--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ sqlx = { version = "0.8.0", features = [
 ] }
 uuid = { version = "1.6.1", features = ["serde", "v4"] }
 env_logger = "0.11.5"
+chrono = "0.4.38"
 
 
 [features]
